# python-grpc-study

./: Makefile  README.md  pants.toml
build-support/: pylint.config  pyproject.toml  pytest.ini
src/protos/calc/v1/: calc.proto
src/protos/helloworld/v1/: BUILD  helloworld.proto
src/python/grpc-server/: BUILD  Dockerfile  pyproject.toml
src/python/grpc-server/grpc_server/: calc_servicer.py  main.py  multiple_insecure_server.py  single_insecure_server.py
src/python/grpc-server/tests/: test_client.py  test_server.py
